@@ -6,6 +6,7 @@ import com.github.redouane59.twitter.dto.tweet.MediaCategory;
 import com.github.redouane59.twitter.helpers.URLHelper;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import org.junit.jupiter.api.Test;
 
@@ -138,7 +139,7 @@ public class UrlHelperTest {
         + URLHelper.ALL_TWEET_FIELDS
         + "&"
         + URLHelper.ALL_USER_FIELDS,
-        urlHelper.getTweetListUrl(List.of("1294174710624849921,1294380029430960128,1294375095746666496")));
+        urlHelper.getTweetListUrl(Arrays.asList("1294174710624849921,1294380029430960128,1294375095746666496")));
   }
 
   @Test
